# serial_cbir

./: CMakeLists.txt  README.md  f_Geometric.cpp  f_Geometric.hpp  f_Haralick.cpp  f_Haralick.hpp  feature.cpp  feature.hpp  lib.cpp  lib.hpp  main.cpp  mcdetect.cpp  mcdetect.hpp  mydatatype.cpp  mydatatype.hpp  regionprops.cpp  train.cpp  train.hpp
